Trabajando en Agregar Eventos

--- a/app/views/coord_ev/eventos/index.html
+++ b/app/views/coord_ev/eventos/index.html
@@ -16,7 +16,7 @@
 
 	<%- include('../../partials/coord_eval/navbar.html') %>
 
-	<div class="container-fluid">
+	<div class="container-fluid" id="main">
 		<div class="row justify-content-md-center">
 			<div class="col-md-12">
 				<div class="row">
@@ -32,7 +32,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-3">
+					<div class="col-sm-12 col-md-3">
 						<div class="card">
 						  	<div class="card-header">
 						    	Datos Personales:
@@ -53,34 +53,36 @@
 
 					<div class="col-md-9">
 						<div class="row">
-							<div class="col-lg-5">
+							<div class="col-sm-12 col-md-12 col-lg-5">
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
 											<h3>Planificar Evento</h3>
 										</div>
-										<form method="POST" action="">
+										<form @submit.prevent="enviarEvento">
 											<div class="form-row">
 											    <div class="form-group col-md-6">
 											      <label for="nombre">Nombre:</label>
-											      <input type="text" class="form-control" placeholder="Ingrese el Nombre o Titulo del Evento">
+											      <input type="text" v-model="nombre" class="form-control" placeholder="Ingrese el Nombre o Titulo del Evento" required autofocus>
 											    </div>
 											    <div class="form-group col-md-6">
 											      <label for="direccion">Dirección:</label>
-											      <input type="text" class="form-control" placeholder="Ingrese la Dirección">
+											      <input type="text" v-model="direccion" class="form-control" placeholder="Ingrese la Dirección" required>
 											    </div>
 											</div>
 
 											<div class="form-row">
 											    <div class="form-group col-md-6">
 											      	<label>Fecha:</label>
-													<input type="date" name="fecha" class="form-control">
+													<input type="date" v-model="fecha" name="fecha" class="form-control" required>
 											    </div>
 											    <div class="form-group col-md-6">
 											      <label>Nucleo: </label>
-													<select name="nucleo" class="form-control">
+													<select name="nucleo" v-model="nucleo" class="form-control" required>
 														<option disabled value="">Please select one</option>
-														<option>...</option>
+														<% for(let i = 0; i < Nucleos.length; i ++) {%>
+															<option value="<%- Nucleos[i].codigo %>"><%- Nucleos[i].nombre %></option>
+														<%}%>
 													</select>
 											    </div>
 											</div>
@@ -88,29 +90,31 @@
 											<div class="form-row">
 											    <div class="form-group col-md-4">
 											      	<label>Dirigido a:</label>
-													<input type="text" name="publico" class="form-control" placeholder="Publico">
+													<input type="text" v-model="publico" name="publico" class="form-control" placeholder="Publico" required>
 											    </div>
 											    <div class="form-group col-md-4">
 											      <label>Tipo:</label>
-													<select name="tipo" class="form-control">
+													<select v-model="tipo" name="tipo" class="form-control" required>
 														<option disabled value="">Please select one</option>
-														<option>Nacional</option>
-														<option>Taller</option>
+														<% for(let i = 0; i < tipoEvent.length; i ++) {%>
+															<option value="<%- tipoEvent[i].id %>"><%- tipoEvent[i].nombre %></option>
+														<%}%>
 													</select>
 											    </div>
 											    <div class="form-group col-md-4">
 											      	<label>Cupos:</label>
-													<input type="number" name="cupos" class="form-control">
+													<input type="number" v-model="cupos" name="cupos" class="form-control" required>
 											    </div>
 											    <div class="form-group col-md-12">
 												  	<label for="descripcion">Descripción:</label>
-												  	<textarea class="form-control" rows="5" name="descripcion"></textarea>
+												  	<textarea class="form-control" rows="5" v-model="descripcion" name="descripcion" required></textarea>
 												</div>
 											</div>
 
 											<div class="form-row">
 												<div class="form-group col-md-12">
-													<input type="file" name="img" class="form-control">
+													<!--<input type="file" class="form-control">-->
+													<input type="file" id="file" ref="myFiles" class="form-control" @change="previewFiles" multiple required>
 												</div>
 											</div>
 
@@ -120,9 +124,10 @@
 										</form>
 									</div>
 								</div>
+								<br>
 							</div>
-
-							<div class="col-lg-7">
+							
+							<div class="col-sm-12 col-md-12 col-lg-7">
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
@@ -135,9 +140,9 @@
 												<th style="width: 30%">Acción</th>
 											</thead>
 											<tbody>
-												<tr>
-													<td>1</td>
-													<td>Evento Ejemplo 1</td>
+												<tr v-for="evento of eventos">
+													<td>{{ evento.id }}</td>
+													<td>{{ evento.nombre }}</td>
 													<td>
 														<a href="" class="btn btn-warning btn-xs">Edit</a>
 														<a href="" class="btn btn-danger btn-xs">Delete</a>
@@ -166,5 +171,76 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.validate.min.js"></script>
 	<script src="/js/main.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+	<script type="text/javascript">
+		new Vue({
+			el:'#main',
+			data: {
+				nombre: '',
+				direccion: '',
+				fecha: '',
+				nucleo: '',
+				publico: '',
+				tipo: '',
+				cupos: '',
+				descripcion: '',
+				files: {},
+				eventos: []
+			},
+			created() {
+				this.getEventos();
+			},
+			methods: {
+				getEventos() {
+					axios.get('/eventosTodos')
+						.then(res => {
+							this.eventos = res.data
+							console.log(this.eventos)
+						}).catch(err => {
+							console.log(err)
+						})
+				},
+
+				previewFiles() {
+					this.files = this.$refs.myFiles.files
+				},
+
+				enviarEvento() {
+					axios.post('/enviarEvento', {
+						nombre: this.nombre,
+						direccion: this.direccion,
+						fecha: this.fecha,
+						nucleoCodigo: this.nucleo,
+						publico: this.publico,
+						tipoEventoId: this.tipo,
+						cupos: this.cupos,
+						descripcion: this.descripcion,
+						files: this.files[0].name
+					}).then(res => {
+						console.log('exito');
+
+						this.nombre = '',
+						this.direccion = '',
+						this.fecha = '',
+						this.nucleo = '',
+						this.publico = '',
+						this.tipo = '',
+						this.cupos = '',
+						this.descripcion = '',
+						this.files = {}
+					}).then(data => {
+						this.getEventos()
+					})
+
+					.catch(err => {
+						console.log(err)
+					})
+
+					
+				}	
+			}
+		})
+	</script>
 </body>
 </html>
