--- a/app/views/coord_ev/index.html
+++ b/app/views/coord_ev/index.html
@@ -78,7 +78,7 @@
 												</div>
 												    	
 											</div>
-											<a href="/coord_ev/eventos">
+											<a href="/coord_ev/getEventos">
 												<div class="card-footer text-muted">
 				    								2 days ago
 				  								</div>
