--- a/app/views/coord_ev/eventos/planificados.html
+++ b/app/views/coord_ev/eventos/planificados.html
@@ -54,6 +54,30 @@
 					<div class="col-md-9">
 						<div class="row">
 							<div class="col-sm-12 col-md-12 col-lg-12">
+								<!--=======mensaje de alerta==========-->
+								<% if(message == false) {%>
+
+								<%} else {%>
+									<div class="alert alert-success alert-dismissible fade show" role="alert">
+							            <%= message %>
+							            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+							        </div>
+								<%}%>
+
+								<% if(error == false) {%>
+
+								<%} else {%>
+									<div class="alert alert-danger alert-dismissible fade show" role="alert">
+							            <%= error %>
+							            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+							        </div>
+								<%}%>
+								<!--=======fin mensaje de alerta==========-->
+
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
@@ -81,7 +105,7 @@
 														<a href="javascript:;"><img src="../../../../uploads/eventos/<%=Eventos[i].files%>" class="img-thumbnail" style="width: 30%"/></a>
 													</td>
 													<td>
-														<a href="#" class="btn btn-warning btn-xs">Edit</a>
+														<a href="/coord_ev/editEvento/<%- Eventos[i].id %>" class="btn btn-warning btn-xs">Edit</a>
 														<a href="/coord_ev/deleteEvento/<%- Eventos[i].id %>" class="btn btn-danger btn-xs">Delete</a>
 													</td>
 												</tr>
