--- a/app/views/coord_ev/index.html
+++ b/app/views/coord_ev/index.html
@@ -86,6 +86,29 @@
 										</div>
 										<br>
 									</div>
+
+									<div class="col-md-4">
+										<div class="card border-primary">
+											<div class="card-body text-white bg-danger">
+												<div class="row">
+													<div class="col-md-3">
+												   		<i class="fa fa-bullhorn fa-5x"></i>
+													</div>
+													<div class="col-md-9 text-right">
+													   	<div><h2>4</h2></div>
+		                                    			<div><p style="font-size: 15pt">Instrumentos</p></div>
+													</div>	
+												</div>
+												    	
+											</div>
+											<a href="/coord_ev/instrumentos">
+												<div class="card-footer text-muted">
+				    								2 days ago
+				  								</div>
+			  								</a>
+										</div>
+										<br>
+									</div>
 								</div>
 							</div>
 						</div>
