Asignando Presidente incomleto

--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -22,7 +22,7 @@
 
 	<div class="container-fluid">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="row">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
@@ -95,7 +95,7 @@
 																	<%if(Presidente == undefined) {%>
 																		<div class="col-sm-12 col-md-12 text-center">
 																			<h4>Vacante</h4>
-																			<a href="">Asignar</a>
+																			<a href="/admin/asignar-presi">Asignar</a>
 																		</div>
 																	<%} else {%>
 																		<div class="col-sm-12 col-md-12">
