--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -56,7 +56,16 @@
 
 					<div class="col-sm-12 col-md-12 col-lg-9">
 						<!--=======mensaje de alerta==========-->
+						<% if(message == false) {%>
 
+						<%} else {%>
+							<div class="alert alert-success alert-dismissible fade show" role="alert">
+						        <%= message %>
+						       	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+						    </div>
+						<%}%>
 						<!--=======fin mensaje de alerta==========-->
 
 						<div class="row">
