--- a/app/views/admin/asignar/coord_plani.html
+++ b/app/views/admin/asignar/coord_plani.html
@@ -4,29 +4,212 @@
 	<meta charset="UTF-8">
 	<title>CREDIDUDO | ADMIN</title>
 
-	<style>
-		table, th, td {
-    		border: 1px solid black;
-    		border-collapse: collapse;
-		}
-	</style>
-
-
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script type="text/javascript" src="/js/pace.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
+	<!-- Custom styles for this template -->
+    <link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 </head>
 <body>
-	<h3>Asignar Coord Planificación</h3>
+	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+	</div>	
 
-	<form method="post" action="/admin/buscar_cp">
-		<label for="cedula">Cedula de Identidad: </label>
-		<input type="text" name="cedula" placeholder="Ingrese una Cedula">
+	<%- include('../../partials/president/navbar.html') %>
 
-		<input type="submit" name="buscar" value="Buscar">
-	</form>
+	<div class="container-fluid" id="main">
+		<div class="row justify-content-md-center">
+			<div class="col-md-12">
+				<div class="row">
+					<div class="col-md-12">
+						<!--=======MIGAS DE PAN=========-->
+						<nav aria-label="breadcrumb" style="margin-top: 1%">
+							<ol class="breadcrumb">
+							    <li class="breadcrumb-item active" aria-current="page">Home</li>
+							</ol>
+						</nav>
+						<!--=======FIN MIGAS DE PAN=========-->		
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-12 col-md-12 col-lg-3">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="card">
+								  	<div class="card-header">
+								    	Datos Personales:
+								  	</div>
+								  
+								  	<div class="card-body">
+								    	<div class="form-group">
+								    		<p><b>Nombre: </b><%- Usuario.nombre %></p>
+								    		<p><b>Apellido: </b><%- Usuario.apellido %></p>
+								    		<p><b>Nucleo: </b><%- Usuario.nucleo.nombre %></p>
+								    		<p><b>Unidad: </b><%- Usuario.unidad.nombre %></p>
+								    	</div>
+								  	</div>
+								</div>	
+								<br>	
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-9">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-body">
+										<div class="article border-bottom">
+											<div class="input-group mb-12">
+												<label for="cedula" class="col-sm-2 col-form-label">Cedula</label>
+											  	<input type="text" class="form-control" v-model="cedula" placeholder="Ingrese Una Cedula de Identidad" v-on:keyup.enter="getUsuario(cedula)" autofocus>
+												<div class="input-group-append">
+													<button class="btn btn-outline-secondary" type="button">Buscar</button>
+												</div>
+											</div>
+											<br>
+										</div>
+										<br>
+										<div class="row">
+											<div class="col-lg-12">
+												<div class="row">
+													<div class="col-md-12 text-center" v-if="!variable">
+														<h2>Debe Elegir un Usuario</h2>
+													</div>
+
+													<div class="col-md-12 text-center" v-if="variable">
+														<div class="row">
+															<div class="col-md-4">
+																<img src="/images/img/user.png" alt="" class="img-thumbnail">
+															</div>
+															<div class="col-md-8">
+																<form method="POST" action="/admin/asignar-coordP">
+																	<input type="hidden" name="cedula" v-model="user.cedula">
+																	<fieldset disabled>
+																		<div class="form-group row">
+																		    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre:</label>
+																		    <div class="col-sm-9">
+																		    	<input type="text" class="form-control form-control-sm" v-model="user.nombre">
+																		    </div>
+																		</div>
+
+																		<div class="form-group row">
+																		    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido:</label>
+																		    <div class="col-sm-9">
+																		    	<input type="text" class="form-control form-control-sm" v-model="user.apellido">
+																		    </div>
+																		</div>
+
+																		<div class="form-group row">
+																		    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I:</label>
+																		    <div class="col-sm-9">
+																		    	<input type="text" class="form-control form-control-sm" v-model="user.cedula">
+																		    </div>
+																		</div>
+																	</fieldset>	
+																	<hr>
+																	<input type="submit" class="btn btn-primary btn-block" name="asignar" value="Asignar">
+																</form>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<br>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
+
+	<footer class="footer" style="background: #BEBCB0;">
+		<div class="container">
+			<span class="text-muted">Pie de Pagina</span>
+		</div>
+	</footer>
 	
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-	<script src="/js/app.js">	
-		
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+	<script type="text/javascript">
+		new Vue({
+			el: '#main',
+			data: {
+				cedula: '',
+				variable: false,
+				user: {},
+				admin: {},
+				presidente: {}
+			},
+			created() {
+				/*Buscar al usuario con cargo de admin del sistema*/
+				this.getAdmin();
+				/*Buscar al Usuario con el cargo de Presidente de CREDIUDO*/
+				this.getPresidente();
+			},
+			methods: {
+				//Definicion de funcion getAdmin
+				getAdmin() {
+					axios.get('/admin/getAdmin')
+						.then(res => {
+							this.admin = res.data;
+						}).catch(err => {
+							console.log(err)
+						})
+				},
+				//Definicion de funcion getPresidente
+				getPresidente() {
+					axios.get('/admin/getPresidente')
+						.then(res => {
+							this.presidente = res.data;
+						}).catch(err => {
+							console.log(err)
+						})
+				},
+				//Funcion para Buscar un Usuario la cedula ingresada
+				getUsuario(cedula) {
+					//SI la cedula ingresada es igual a la cedula del admin
+					if(cedula == this.admin.cedula) {
+						alert("Este Usuario ya esta Asignado para el Cargo de Admin");
+						this.cedula = ''
+					} 
+					//si la cedula ingresada es igual a la cedula del presidente
+					else if(cedula == this.presidente.cedula) {
+						alert("Este Usuario ya esta Asignado para el Cargo de Presidente");	
+						this.cedula = ''
+					} 
+					/*
+						Si la cedula ingresada es distinta a las condiciones anteriores
+					*/
+					else {
+						axios.get('/admin/buscarUsuario/' + cedula)
+							.then(res => {
+								//Si no se encuentra un Usuario con la ceula ingresada
+								if(res.data == false) {
+									alert("Este Usuario no Existe")
+									this.cedula = ''
+								} 
+								//Si se encuentra un Usuario con la cedula ingresada
+								else {
+									this.user = res.data;
+									this.variable = true;
+									this.cedula = ''
+								}
+							}).catch(err => {
+								console.log(err)
+							})
+					}
+				}
+			}
+		})
 	</script>
 </body>
 </html>
