Reemplazando Presidente Listo

--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -117,7 +117,7 @@
 																				</tr>
 																				<tr>
 																					<td>
-																						<a href="">Cambiar</a>
+																						<a href="/admin/cambiarPresidente">Cambiar</a>
 																					</td>
 																				</tr>
 																			</table>
