--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -163,7 +163,7 @@
 																				</tr>
 																				<tr>
 																					<td>
-																						<a href="">Cambiar</a>
+																						<a href="/admin/cambiarCoordPlani">Cambiar</a>
 																					</td>
 																				</tr>
 																			</table>
@@ -209,7 +209,7 @@
 																				</tr>
 																				<tr>
 																					<td>
-																						<a href="">Cambiar</a>
+																						<a href="/admin/cambiarCoordEval">Cambiar</a>
 																					</td>
 																				</tr>
 																			</table>
