--- a/app/views/coord_ev/instrumento/agregar.html
+++ b/app/views/coord_ev/instrumento/agregar.html
@@ -57,43 +57,46 @@
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
-											<div class="row">
-												<div class="col-md-9">
-													<h3>Instrumentos de Evaluación Existentes</h3>	
-												</div>
-												<div class="col-md-3 text-right">
-													<a href="/coord_ev/addInstrumento">Agregar Instrumento</a>
-												</div>
-											</div>
+											<h3>Datos del Nuevo Instrumento</h3>
 										</div>
-										<table class="table">
-											<thead>
-												<th>#</th>
-												<th>Titulo</th>
-												<th>Categoria</th>
-												<th>Tipo</th>
-												<th>Acción</th>
-											</thead>
-											<tbody>
-												<% for(let i = 0; i < Instrumentos.length; i ++) {%>
-													<tr>
-														<td><%- i + 1 %></td>
-														<td><%- Instrumentos[i].titulo %></td>
-														<td><%- Instrumentos[i].categorium.nombre %></td>
-														<td><%- Instrumentos[i].tipoEval.nombre %></td>
-														<td>
-															<a href="/coord_ev/editIntrumento/<%- Instrumentos[i].id %>" class="btn btn-warning btn-sm">edit</a>
-															<a href="/coord_ev/verInstrumento/<%- Instrumentos[i].id %>" class="btn btn-danger btn-sm">Ver</a>
-														</td>
-													</tr>
-												<%}%>
-											</tbody>
-										</table>
+										<form method="POST" action="/coord_ev/add-instrument">
+											<br>
+											<div class="form-group">
+												<label for="nombre">Nombre o Titulo:</label>
+												<input type="text" name="titulo" placeholder="Nombre o Titulo del Instrumento de Evaluación" class="form-control" required>
+											</div>
+
+											<div class="row">
+											    <div class="col">
+											      	<label for="categoria">Categoria:</label>
+											      	<select name="categoria" class="form-control" required>
+											      		<option>Seleccione una Opción</option>
+											      		<% for(let i = 0; i < Categorias.length; i ++) {%>
+															<option value="<%- Categorias[i].id %>"><%- Categorias[i].nombre %></option>	
+											      		<%}%>
+												    </select>
+											    </div>
+											    <div class="col">
+											    	<label for="tipo">Tipo:</label>
+											      	<select name="tipo" class="form-control" required>
+												     	<option>Seleccione una Opción</option>
+												     	<% for(let i = 0; i < Tipo.length; i ++) {%>
+															<option value="<%- Tipo[i].id %>"><%- Tipo[i].nombre %></option>
+												     	<%}%>
+												    </select>
+											    </div>
+											</div>
+											<hr>
+											<input type="submit" name="crear" class="btn btn-primary btn-block" value="Crear">
+										</form>
 									</div>
 								</div>
 								<br>
 							</div>
+							
+							
 						</div>
+						<br>
 					</div>
 				</div>
 			</div>
