--- a/app/views/coord_ev/instrumento/edit.html
+++ b/app/views/coord_ev/instrumento/edit.html
@@ -47,7 +47,6 @@
 						    	</div>
 						  	</div>
 						</div>
-
 						<br>
 					</div>
 
@@ -57,41 +56,60 @@
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
-											<div class="row">
-												<div class="col-md-9">
-													<h3>Instrumentos de Evaluación Existentes</h3>	
-												</div>
-												<div class="col-md-3 text-right">
-													<a href="/coord_ev/addInstrumento">Agregar Instrumento</a>
-												</div>
+											<h3>Datos del Instrumento a Editar</h3>
+										</div>
+										<br>
+										<div class="form-group">
+											<label for="nombre">Nombre o Titulo:</label>
+											<input type="text" name="titulo" placeholder="Nombre o Titulo del Instrumento de Evaluación" value="<%- Instrumento.titulo %>" class="form-control" required>
+										</div>
+
+										<div class="row">
+											<div class="col">
+											   	<label for="categoria">Categoria:</label>
+											    <select name="categoria" class="form-control" required>
+											      	<option value="<%- Instrumento.categoriumId %>"><%- Instrumento.categorium.nombre %></option>
+											      	<% for(let i = 0; i < Categorias.length; i ++) {%>
+														<option value="<%- Categorias[i].id %>"><%- Categorias[i].nombre %></option>	
+											      	<%}%>
+												</select>
+											</div>
+											<div class="col">
+											   	<label for="tipo">Tipo:</label>
+											    <select name="tipo" class="form-control" required>
+												    <option value="<%- Instrumento.tipoEvalId %>"><%- Instrumento.tipoEval.nombre %></option>
+												    <% for(let i = 0; i < Tipos.length; i ++) {%>
+														<option value="<%- Tipos[i].id %>"><%- Tipos[i].nombre %></option>
+												     	<%}%>
+												</select>
 											</div>
 										</div>
-										<table class="table">
-											<thead>
-												<th>#</th>
-												<th>Titulo</th>
-												<th>Categoria</th>
-												<th>Tipo</th>
-												<th>Acción</th>
-											</thead>
-											<tbody>
-												<% for(let i = 0; i < Instrumentos.length; i ++) {%>
-													<tr>
-														<td><%- i + 1 %></td>
-														<td><%- Instrumentos[i].titulo %></td>
-														<td><%- Instrumentos[i].categorium.nombre %></td>
-														<td><%- Instrumentos[i].tipoEval.nombre %></td>
-														<td>
-															<a href="/coord_ev/editIntrumento/<%- Instrumentos[i].id %>" class="btn btn-warning btn-sm">edit</a>
-															<a href="/coord_ev/verInstrumento/<%- Instrumentos[i].id %>" class="btn btn-danger btn-sm">Ver</a>
-														</td>
-													</tr>
-												<%}%>
-											</tbody>
-										</table>
+										<hr>
+										<input type="submit" name="edit" class="btn btn-success btn-block" value="Editar">
 									</div>
 								</div>
 								<br>
+							</div>
+
+							<div class="col-md-12">
+								<table class="table table-hover table-sm table-bordered">
+									<thead>
+										<tr>
+									    	<th scope="col" style="width: 5%">#</th>
+										    <th scope="col" style="width: 55%">Item</th>
+										   	<th scope="col" style="width: 20%">Factor</th>
+									     	<th scope="col" style="width: 20%">Acción</th>
+									    </tr>
+									</thead>
+									<tbody>
+										<tr v-for="pregunta of preguntas">
+											<th scope="row">1</th>
+										    <td>Pregunta</td>
+										    <td>Factor Ejemplo</td>
+										    <td>@mdo</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</div>
