--- a/app/views/coord_ev/instrumento/ver_2.html
+++ b/app/views/coord_ev/instrumento/ver_2.html
@@ -33,21 +33,76 @@
 
 				<div class="row">
 					<div class="col-sm-12 col-md-3">
-						<div class="card">
-						  	<div class="card-header">
-						    	Datos Personales:
-						  	</div>
-						  
-						  	<div class="card-body">
-						    	<div class="form-group">
-						    		<p><b>Nombre: </b><%- Usuario.nombre %></p>
-						    		<p><b>Apellido: </b><%- Usuario.apellido %></p>
-						    		<p><b>Nucleo: </b><%- Usuario.nucleo.nombre %></p>
-						    		<p><b>Unidad: </b><%- Usuario.unidad.nombre %></p>
-						    	</div>
-						  	</div>
-						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="card">
+								  	<div class="card-header">
+								    	Datos Personales:
+								  	</div>
+								  
+								  	<div class="card-body">
+								    	<div class="form-group">
+								    		<p><b>Nombre: </b><%- Usuario.nombre %></p>
+								    		<p><b>Apellido: </b><%- Usuario.apellido %></p>
+								    		<p><b>Nucleo: </b><%- Usuario.nucleo.nombre %></p>
+								    		<p><b>Unidad: </b><%- Usuario.unidad.nombre %></p>
+								    	</div>
+								  	</div>
+								</div>
+								<br>
+							</div>
 
+							<div class="col-md-12" v-if="!crearPregunta">
+								<div class="card">
+									<div class="card-header">
+										Nueva Pregunta
+									</div>
+									<div class="card-body">
+										<a href="javascript:void(0)" v-on:click="creandoPregunta()" class="btn btn-primary btn-block">Crear Pregunta</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-12" v-else>
+								<div class="card">
+									<div class="card-header">
+										Nueva Factor
+									</div>
+									<div class="card-body">
+										<button type="button" class="btn btn-success btn-block" data-toggle="modal" data-target="#exampleModalCenter">Crear Factor</button>
+
+										<!-- Modal -->
+										<form @submit.prevent="addFactor(instrumento.id)">	
+											<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+											  	<div class="modal-dialog modal-dialog-centered" role="document">
+												    <div class="modal-content">
+												      		<div class="modal-header">
+												        		<h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+												        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												          			<span aria-hidden="true">&times;</span>
+												        		</button>
+												      		</div>
+												      		<div class="modal-body">
+												        		<div class="form-group row">
+																    <label for="inputPassword" class="col-sm-3 col-form-label">Factor:</label>
+																    <div class="col-sm-9">
+																      	<input type="text" class="form-control" placeholder="Ingrese el Nuevo Factor" v-model="newFactor">
+																    </div>
+																</div>
+												      		</div>
+												      		<div class="modal-footer">
+												        		<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+												        		<input type="submit" name="save" class="btn btn-primary" value="Save changes">
+					
+												      		</div>
+												    </div>
+											  	</div>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>								
+						</div>
 						<br>
 					</div>
 
@@ -59,6 +114,7 @@
 										<div class="article border-bottom">
 											<h3>Datos del Nuevo Instrumento</h3>
 										</div>
+
 										<form @submit.prevent="editarInicio(instrumento.id)">
 											<fieldset v-bind:disabled="habilitado">
 												<br>
@@ -90,48 +146,73 @@
 											
 											<a href="javascript:void(0)" v-if="habilitado" v-on:click="habilitar()" class="btn btn-primary btn-block">Editar</a>
 
-											<input type="submit" v-else class="btn btn-success btn-block" value="Guardar">	
-											
-											<br>
-											<div class="article border-top">
-												<br>
-												<table class="table table-hover table-sm table-bordered">
-													<thead>
-														<tr>
-													    	<th scope="col" style="width: 5%">#</th>
-														    <th scope="col" style="width: 55%">Item</th>
-														   	<th scope="col" style="width: 20%">Factor</th>
-													     	<th scope="col" style="width: 20%">Acción</th>
-													    </tr>
-													</thead>
-													<tbody>
-														<tr v-for="(pregunta, index) of preguntas">
-															<th scope="row">{{ index + 1 }}</th>
-														    <td>
-														    	<input type="text" v-model="pregunta.nombre" class="form-control" v-bind:disabled="pregunta.id !== preguntaSeleccionada">
-														    	
-														    </td>
-														    <td>
-														    	<select v-model="pregunta.factorId" class="form-control" v-bind:disabled="pregunta.id !== preguntaSeleccionada">
-														    		<option v-for="opti in factores" v-bind:value="opti.id">
-														    			{{ opti.nombre }}
-														    		</option>
-														    	</select>
-														    	
-														    </td>
-														    <td>
-														    	<a href="javascript:void(0)" v-if="preguntaSeleccionada === null" v-on:click="edicionPregunta(pregunta.id)" class="btn btn-primary btn-sm btn-block">Editar</a>
-
-														    	<a href="javascript:void(0)" v-if="preguntaSeleccionada === pregunta.id" v-on:click="guardarEdicion(pregunta.id, pregunta.nombre, pregunta.factorId)" class="btn btn-success btn-sm btn-block">Save</a>
-														    </td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</form>
+											<input type="submit" v-else class="btn btn-success btn-block" value="Guardar">
+										</form>										
 									</div>
 								</div>
 								<br>
+							</div>
+
+							<div class="col-md-12" v-if="crearPregunta">
+								<div class="card">
+									<div class="card-body">
+										<form @submit.prevent="addPregunta(instrumento.id)">
+											<div class="row">
+											    <div class="col-md-4">
+											    	<label>Factor:</label>
+											      	<select v-model="pregunta.factor" name="" class="form-control">
+											      		<option value=""> --Seleccione una Opción-- </option>
+											      		<option v-for="option in factores" v-bind:value="option.id">
+															{{ option.nombre }}
+														</option>
+											      	</select>
+											    </div>
+											    <div class="col-md-8">
+											    	<label>Item:</label>
+											      	<input type="text" v-model="pregunta.item" class="form-control" placeholder="Ingrese un Item">
+											    </div>
+											</div>
+											<hr>
+											<button class="btn btn-primary">Add</button>
+										</form>										
+									</div>
+								</div>
+								<br>
+							</div>
+
+							<div class="col-md-12">
+								<table class="table table-hover table-sm table-bordered">
+									<thead>
+										<tr>
+											<th scope="col" style="width: 5%">#</th>
+											<th scope="col" style="width: 55%">Item</th>
+											<th scope="col" style="width: 20%">Factor</th>
+											<th scope="col" style="width: 20%">Acción</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr v-for="(pregunta, index) of preguntas">
+											<th scope="row">{{ index + 1 }}</th>
+											<td>
+												<input type="text" v-model="pregunta.nombre" class="form-control" v-bind:disabled="pregunta.id !== preguntaSeleccionada">	
+											</td>
+											<td>
+												<select v-model="pregunta.factorId" class="form-control" v-bind:disabled="pregunta.id !== preguntaSeleccionada">
+													<option v-for="opti in factores" v-bind:value="opti.id">
+														{{ opti.nombre }}
+													</option>
+												</select>   	
+											</td>
+											<td>
+												<a href="javascript:void(0)" v-if="preguntaSeleccionada === null" v-on:click="edicionPregunta(pregunta.id)" class="btn btn-primary btn-sm">Editar</a>
+												
+												<a href="javascript:void(0)" v-if="preguntaSeleccionada === null" v-on:click="deleteItem(pregunta.id)" class="btn btn-danger btn-sm">Eliminar</a>
+
+												<a href="javascript:void(0)" v-if="preguntaSeleccionada === pregunta.id" v-on:click="guardarEdicion(pregunta.id, pregunta.nombre, pregunta.factorId)" class="btn btn-success btn-sm btn-block">Save</a>
+											</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</div>
@@ -167,12 +248,14 @@
 					factor: '',
 					item: ''
 				},
+				newFactor: '',
 				categorias: [],
 				tipos: [],
 				habilitado: true,
 				preguntas: [],
 				factores: [],
-				preguntaSeleccionada: null
+				preguntaSeleccionada: null,
+				crearPregunta: false
 				//habilitaPregunta: true
 			},
 			created() {
@@ -273,7 +356,50 @@
 
 			      	this.preguntaSeleccionada = null;
 			      	this.getPreguntas(id);
-			    }
+			    },
+			    deleteItem(id) {
+			    	var respuesta = confirm("Esta seguro que desea Eliminar este Item");
+			    	if(respuesta == true) {
+			    		axios.delete('/coord_ev/deleteItem/' + id)
+			    			.then(res => {
+			    				console.log('Item Eliminado');
+			    			}).catch(err => {
+			    				console.log(err);
+			    			});
+			    		var currentUrl = window.location.pathname.split('/');
+						var urlId = currentUrl[3];
+
+						this.getPreguntas(urlId);
+			    	} else {
+			    		console.log('No elimines');
+			    	}
+			    },
+			    creandoPregunta() {
+			    	this.crearPregunta = true;
+			    },
+			    addPregunta(id) {
+					axios.post('/coord_ev/addPregunta/' + id, {
+						factor: this.pregunta.factor,
+						nombre: this.pregunta.item
+					}).then(res => {
+						this.getPreguntas(id);
+						console.log(res);
+						this.pregunta.factor = '';
+						this.pregunta.item = ''
+					}).catch(err => {
+						console.log(err)
+					})
+				},
+				addFactor(id) {
+					axios.post('/cord_ev/crearFactor/' + id, {
+						factor: this.newFactor
+					}).then(res => {
+						console.log('Factor Creado');
+					}).catch(err => {
+						console.log(err);
+					})
+					this.getFactores();
+				}
 			}
 		});
 	</script>
