Agregando iconos a la gestion de Instrumentos de Eval

--- a/app/views/coord_ev/index.html
+++ b/app/views/coord_ev/index.html
@@ -3,9 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Coord. Evaluación</title>
+	<link rel="shortcut icon" href="/images/title/favicon-96x96.png">
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<!--===================Cargando Pagina===================-->
+	<script type="text/javascript" src="/js/pace.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
+	
 	<!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 </head>
@@ -92,7 +98,7 @@
 											<div class="card-body text-white bg-danger">
 												<div class="row">
 													<div class="col-md-3">
-												   		<i class="fa fa-bullhorn fa-5x"></i>
+												   		<i class="fa fa-file-text fa-5x" aria-hidden="true"></i>
 													</div>
 													<div class="col-md-9 text-right">
 													   	<div><h2>4</h2></div>
