--- a/app/views/coord_ev/instrumento/home.html
+++ b/app/views/coord_ev/instrumento/home.html
@@ -3,9 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Coord. Evaluación</title>
+	<link rel="shortcut icon" href="/images/title/favicon-96x96.png">
 
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<!--===================Cargando Pagina===================-->
+	<script type="text/javascript" src="/js/pace.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
+
 	<!-- Custom styles for this template -->
     <link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 </head>
@@ -59,10 +65,15 @@
 										<div class="article border-bottom">
 											<div class="row">
 												<div class="col-md-9">
-													<h3>Instrumentos de Evaluación Existentes</h3>	
+													<p style="font-size: 25pt">
+														<i class="fa fa-file-text" aria-hidden="true"></i>
+														Instrumentos de Evaluación Existentes	
+													</p>
 												</div>
 												<div class="col-md-3 text-right">
-													<a href="/coord_ev/addInstrumento">Agregar Instrumento</a>
+													<a href="/coord_ev/addInstrumento" data-toggle="tooltip" data-placement="right" title="Nuevo Instrumento">
+														<i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+													</a>
 												</div>
 											</div>
 										</div>
@@ -82,8 +93,8 @@
 														<td><%- Instrumentos[i].categorium.nombre %></td>
 														<td><%- Instrumentos[i].tipoEval.nombre %></td>
 														<td>
-															<a href="/coord_ev/editIntrumento/<%- Instrumentos[i].id %>" class="btn btn-warning btn-sm">edit</a>
-															<a href="/coord_ev/verInstrumento/<%- Instrumentos[i].id %>" class="btn btn-danger btn-sm">Ver</a>
+															<!--<a href="/coord_ev/editIntrumento/<%- Instrumentos[i].id %>" class="btn btn-warning btn-sm">edit</a>-->
+															<a href="/coord_ev/verInstrumento/<%- Instrumentos[i].id %>" class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="right" title="Ver Instrumento"><i class="fa fa-eye" aria-hidden="true"></i> Ver</a>
 														</td>
 													</tr>
 												<%}%>
